[package]
name = "spit"
version = "0.1.0"
edition = "2021"
default-run = "spit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.35"
eframe = "0.26.2"
env_logger = "0.11.3"
faster-hex = "0.9.0"
flate2 = { version = "1.0.28", features = ["zlib"], default-features = false }
memmap2 = "0.9.4"
log = "0.4.21"
git2 = "0.18.2"
rfd = "0.14.0"
notify = "6.1.1"
shell-escape = "0.1.5"
clipboard = "0.5.0"
spiff = { git = "https://github.com/sphaerophoria/spiff", rev = "e6770120108a931425560c6d90628e54e8a07f1b" }

[dev-dependencies]
tempfile = "3.10.1"
tar = "0.4.40"

[profile.release]
debug = true
